// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ProjectItem component correctly with uname === project.user 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        class="project-infos"
      >
        <div
          class="project-data"
        >
          <p
            class="project__name"
          >
            Project one
          </p>
          <p
            class="project__user"
          >
            <span
              class="static-text"
            >
              By: 
            </span>
            1
          </p>
          <p
            class="project__time"
          >
            <span
              class="static-text"
            >
              On: 
            </span>
            now
          </p>
          <div
            class="project__users"
          >
            <span
              class="static-text"
            >
              Users in: 
            </span>
            <span>
              1 
            </span>
          </div>
          <div
            class="project__admins"
          >
            <span
              class="static-text"
            >
              Admins in: 
            </span>
            <span>
              1 
            </span>
            <span>
              admin 
            </span>
          </div>
        </div>
        <div
          class="project-buttons"
        >
          <button>
            Edit
          </button>
          <button>
            Delete
          </button>
        </div>
      </div>
      <div>
        NewBug
      </div>
      <hr />
      <div>
        <a>
          <div>
            <p>
              1
            </p>
            <p>
              Bug title
            </p>
            <p>
              medium
            </p>
            <p>
              now
            </p>
            <p>
              admin
            </p>
            <div>
              <span>
                admin 
              </span>
              <span>
                1 
              </span>
            </div>
            <br />
            <div>
              <span>
                admin 
              </span>
              <span>
                1 
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div>
      ProjectDelModal
    </div>
    <div>
      ProjectEditModal
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render ProjectItem component correctly with uname in the project 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        class="project-infos"
      >
        <div
          class="project-data"
        >
          <p
            class="project__name"
          >
            Project one
          </p>
          <p
            class="project__user"
          >
            <span
              class="static-text"
            >
              By: 
            </span>
            1
          </p>
          <p
            class="project__time"
          >
            <span
              class="static-text"
            >
              On: 
            </span>
            now
          </p>
          <div
            class="project__users"
          >
            <span
              class="static-text"
            >
              Users in: 
            </span>
            <span>
              1 
            </span>
          </div>
          <div
            class="project__admins"
          >
            <span
              class="static-text"
            >
              Admins in: 
            </span>
            <span>
              1 
            </span>
            <span>
              admin 
            </span>
          </div>
        </div>
      </div>
      <div>
        NewBug
      </div>
      <hr />
      <div>
        <a>
          <div>
            <p>
              1
            </p>
            <p>
              Bug title
            </p>
            <p>
              medium
            </p>
            <p>
              now
            </p>
            <p>
              admin
            </p>
            <div>
              <span>
                admin 
              </span>
              <span>
                1 
              </span>
            </div>
            <br />
            <div>
              <span>
                admin 
              </span>
              <span>
                1 
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div>
      ProjectDelModal
    </div>
    <div>
      ProjectEditModal
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render ProjectItem component correctly with uname not in the project 1`] = `
<DocumentFragment>
  <div>
    <div>
      Not able to see this project! 
      <a>
        Create one!
      </a>
    </div>
    <div>
      ProjectDelModal
    </div>
    <div>
      ProjectEditModal
    </div>
  </div>
</DocumentFragment>
`;
